# web_control_bridge

./: .gitignore  CMakeLists.txt  README.md  package.xml
config/: robot.yaml
humanoid_interfaces/: CMakeLists.txt  README.md  package.xml
humanoid_interfaces/msg/: Robot4receiverMsg.msg
include/receiver/: receiver.hpp  receiver_master.hpp  receiver_nuc.hpp
include/sender/: sender.hpp  sender_master.hpp  sender_nuc.hpp
launch/: master.launch.py  nuc.launch.py  web_control_bridge.launch.py  web_control_bridge_launch.py
log/: latest_list
msg/: NodeManagerMsg.msg  Robot1senderMsg.msg  Robot3senderMsg.msg
script/: node_manager.py
src/receiver/: receiver.cpp  receiver_master.cpp  receiver_nuc.cpp
src/sender/: sender.cpp  sender_master.cpp  sender_nuc.cpp
web_control_bridge/: CMakeLists.txt  package.xml
web_control_bridge/include/receiver/: receiver.hpp
web_control_bridge/src/receiver/: receiver.cpp
